<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/createShoutoutMenuItem"
        android:icon="@drawable/ic_shoutout_menu"
        android:title="@string/create_shoutout_label" />

    <item
        android:id="@+id/becomeADonorMenuItem"
        android:icon="@drawable/ic_donate_menu"
        android:title="@string/donate_label" />
    <item
        android:id="@+id/searchForDonorsMenuItem"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/search_for_donors_fab_label" />

    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_label" />

    <item
        android:id="@+id/aboutMenuItem"
        android:icon="@drawable/ic_about_menu"
        android:title="@string/about_menu_label" />

    <item
        android:id="@+id/logoutMenuItem"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_menu_label" />
</menu>